--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -98,6 +98,7 @@ outputs:
       host:
         - python
         - pip
+        - setuptools
         - freeglut  # [linux]
         - xorg-libxfixes  # [linux]
         - libglu  # [linux]
